--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
+### Golang
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -15,7 +13,7 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
 
 # Go workspace file
 go.work
@@ -23,3 +21,6 @@ go.work.sum
 
 # env file
 .env
+
+### GoLand
+.idea/
